[refactor]重构请求的方式，简化步骤